k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-deployment
  template:
    metadata:
      labels:
        app: portfolio-deployment
    spec:
      containers:
        - name: portfolio
          image: rutger505/portfolio:${TAG_NAME}
          ports:
            - containerPort: 3000
