k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio-$ENVIRONMENT
spec:
  selector:
    app: portfolio-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
