k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio-$ENVIRONMENT
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - $INGRESS_HOST
      secretName: portfolio-tls
  rules:
    - host: $INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
